Table album {
  id integer [primary key, increment]
  name text [not null]
  color text
  photo_id integer
  description text
  created_at text [not null, default: `CURRENT_TIMESTAMP`]
}

Table photo {
  id integer [primary key, increment]
  album_id integer
  hash text [not null]
  name text [not null]
  size_bytes integer [not null]
  caption text
  taken_at text
  created_at text [not null, default: `CURRENT_TIMESTAMP`]
}

Table person {
  id integer [primary key, increment]
  photo_id integer
  avatar_id integer
  name text [not null]
  created_at text [not null, default: `CURRENT_TIMESTAMP`]
}

Table photo_people {
  photo_id integer [not null]
  person_id integer [not null]

  indexes {
    (photo_id, person_id) [pk]
  }
}

Ref: photo.album_id > album.id [delete: set null]
Ref: album.photo_id > photo.id [delete: set null]
Ref: person.photo_id > photo.id [delete: set null]
Ref: person.avatar_id > photo.id [delete: set null]
Ref: photo_people.photo_id > photo.id [delete: cascade]
Ref: photo_people.person_id > person.id [delete: cascade]